Kubernetes/yml/Addon-Function/ingress/rule/index-web-traefik-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: index-web
  namespace: default
  annotations:
    # https://docs.traefik.io/basics/#circuit-breakers
    traefik.backend.circuitbreaker: NetworkErrorRatio() > 0.5
    traefik.backend.loadbalancer.method: wrr
spec:
  ports:
  - port: 80
  selector:
    service: nginx
    type: backend
